# self-learning

./: .env.example  .gitignore  Burr_DataFrame_Explore.ipynb  pyproject.toml
dspy-explore/: prompt-optimization.ipynb
gemini-ocr/: ocr.py  pydantic_models.py  test_ocr.ipynb
gemini_ocr/: pydantic_models.py  test_ocr.ipynb
llm-frameworks/: crewai_example.py  langgraph_example.py  llm-frameworks.ipynb  vanilla_example.py
llm-frameworks/config/: agents.yaml  tasks.yaml
llm-ocr/: README.md  evaluator_optimizer.ipynb  pyproject.toml
llm-scraping/: .env.example  README.md  hello.py  main.py  pyproject.toml  requirements.txt
other-scripts/: local_rag.ipynb  pandas_chat_prompt.py
